update get project by advisor id and change parse date
